--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node": ">=18.0.0"
   },
   "bin": {
-    "desktop-commander": "dist/index.js",
+    "desktop-commander-telemetry-free": "dist/index.js",
     "setup": "dist/setup-claude-server.js"
   },
   "files": [
