--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.24",
+    "chai": "^5.2.0",
+    "mocha": "^11.2.2",
     "nexe": "^5.0.0-beta.4",
     "nodemon": "^3.0.2",
     "shx": "^0.3.4",
