--- a/package.json
+++ b/package.json
@@ -64,15 +64,26 @@
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
+    "@mozilla/readability": "^0.6.0",
     "@vscode/ripgrep": "^1.15.9",
+    "axios": "^1.6.0",
     "cross-fetch": "^4.1.0",
     "fastest-levenshtein": "^1.0.16",
+    "fs-extra": "^11.3.0",
     "glob": "^10.3.10",
+    "jsdom": "^22.1.0",
+    "micromatch": "^4.0.8",
+    "sharp": "^0.32.6",
+    "turndown": "^7.1.2",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/jsdom": "^21.1.7",
+    "@types/micromatch": "^4.0.9",
     "@types/node": "^20.17.24",
+    "@types/turndown": "^5.0.5",
     "commander": "^14.0.0",
     "nexe": "^5.0.0-beta.4",
     "nodemon": "^3.0.2",
